# goup-rs

./: Cargo.toml
.github/workflows/: release.yml
goup/: Cargo.toml  setup_env_unix
goup-downloader/: Cargo.toml
goup-downloader/src/: downloader.rs  lib.rs  utils.rs
goup-downloader/src/archived/: mod.rs  tgz.rs  zip.rs
goup-misc/: Cargo.toml
goup-misc/src/: consts.rs  dir.rs  op.rs  version.rs
goup-version/: Cargo.toml
goup-version/src/: consts.rs  lib.rs  op.rs  version.rs
goup/examples/: git.rs
goup/src/: cmd_env.rs  cmd_list.rs  cmd_remove.rs  cmd_search.rs  cmd_set.rs  lib.rs  main.rs
goup/src/command/: cache.rs  completion.rs  env.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs  search.rs  set.rs
