[package]
name = "goup-rs"
version.workspace =true
authors.workspace =true
edition.workspace =true
rust-version.workspace =true
description.workspace =true
keywords.workspace =true
license.workspace =true
readme.workspace =true
homepage.workspace =true
repository.workspace =true

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "goup"
path = "src/main.rs"

[build-dependencies]
version_check = "0.9"
shadow-rs = "1.1"

[dependencies]
goup-version = {path = "../goup-version"}
goup-downloader = {path = "../goup-downloader"}

anyhow.workspace = true
log.workspace = true
which.workspace = true

clap = {version = "4.5", features = ["derive", "env"]}
clap_complete = "4.5"
dialoguer = "0.11"
shadow-rs = "1.1"
env_logger = {version = "0.11", features = ["color"]}
chrono = "0.4.40"
colored = "3.0.0"
