[package]
name = "goup-rs"
version.workspace =true
authors.workspace =true
edition.workspace =true
rust-version.workspace =true
description.workspace =true
keywords.workspace =true
license.workspace =true
readme.workspace =true
homepage.workspace =true
repository.workspace =true

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "goup"
path = "src/main.rs"

[build-dependencies]
version_check = "0.9"
shadow-rs = "1.1"

[dependencies]
goup-downloader = {path = "../goup-downloader"}
goup-misc = {path = "../goup-misc"}

anyhow.workspace = true
log.workspace = true
which.workspace = true

clap = {version = "4.5", features = ["derive", "env"]}
dialoguer = "0.11"
shadow-rs = "1.1"
colored = "3.0.0"
